exchange/shared/vnet.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vNetName": {
      "type": "string",
      "metadata": {
        "description": "Name of the virtual network."
      }
    },
    "vNetApiVersion": {
      "type": "string",
      "metadata": {
        "description": "Azure API for virtual network."
      }
    },
    "vNetRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of the virtual network."
      }
    },
    "subnetAGSRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of first subnet."
      }
    },
    "subnetDBRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of first subnet."
      }
    },
    "subnetWebRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of second subnet."
      }
    },
    "subnetSBRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of first subnet."
      }
    },
    "subnetSrvRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of second subnet."
      }
    },
    "subnetMgtRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of first subnet."
      }
    },
    "subnetTstRange": {
      "type": "string",
      "metadata": {
        "description": "IP range of second subnet."
      }
    }
  },
  "variables": {
    "subnetAGSName": "subnet-AGS",
    "subnetDBName": "subnet-DB",
    "subnetWebName": "subnet-Web",
    "subnetSBName": "subnet-ServiceBus",
    "subnetSRVName": "subnet-Service",
    "subnetMgtName": "subnet-Managment",
    "subnetTstName": "subnet-Test",
    "nsgAGSName": "LimitAGS",
    "nsgDBName": "LimitDB",
    "nsgSrvName": "LimitSRV",
    "nsgTestName": "LimitTest",
    "nsgWebName": "LimitWeb",
    "nsgSBName": "LimitSB",
    "nsgMgtName": "LimitMgt",
    "vNetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vNetName'))]",
    "subnetManagmentID": "[resourceId('Microsoft.Network/virtualNetworks/subnets',parameters('vNetName'), variables('subnetMgtName'))]"
  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgAGSName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG AGS"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-Internet-80",
            "properties": {
              "description": "Allow Internet Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-Internet-1433",
            "properties": {
              "description": "Allow Internet Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-Web",
            "properties": {
              "description": "Allow Web Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "[parameters('subnetWebRange')]",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound"
            }
          },
          {
            "name": "block-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 201,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgDBName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG DB"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-Service",
            "properties": {
              "description": "Allow Service Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[parameters('subnetSrvRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-mgmt",
            "properties": {
              "description": "Allow Managment Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetMgtRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "block-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgSRVName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG SRV"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-Web",
            "properties": {
              "description": "Allow Web Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetWebRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-SB",
            "properties": {
              "description": "Allow SB Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetSBRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-mgmt",
            "properties": {
              "description": "Allow Managment Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetMgtRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "block-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgTestName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG Test"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-mgmt",
            "properties": {
              "description": "Allow Managment Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetMgtRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-internet",
            "properties": {
              "description": "allow Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-web",
            "properties": {
              "description": "allow Web",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[parameters('subnetWebRange')]",
              "access": "Allow",
              "priority": 201,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-service",
            "properties": {
              "description": "allow Web",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[parameters('subnetSrvRange')]",
              "access": "Allow",
              "priority": 202,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-SB",
            "properties": {
              "description": "allow SB",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[parameters('subnetSBRange')]",
              "access": "Allow",
              "priority": 203,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgWebName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG Web"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-Service",
            "properties": {
              "description": "Allow Service Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetWebRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-SB",
            "properties": {
              "description": "Allow SB Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetSBRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-mgmt",
            "properties": {
              "description": "Allow Managment Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetMgtRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-internet",
            "properties": {
              "description": "Allow Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgSBName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG Test"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-mgmt",
            "properties": {
              "description": "Allow Managment Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetMgtRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "block-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgMgtName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
      ],
      "tags": {
        "displayName": "NSG Management"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-internet-in",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-web",
            "properties": {
              "description": "Allow Web Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetWebRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-sb",
            "properties": {
              "description": "Allow SB Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetSBRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-db",
            "properties": {
              "description": "Allow DB Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetDBRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-srv",
            "properties": {
              "description": "Allow Services Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetSRVRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 104,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-test",
            "properties": {
              "description": "Allow Test Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('subnetTstRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-internet-Out",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgMgtName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgTestName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSBName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSrvName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDBName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAGSName'))]"
      ],
      "location": "[resourceGroup().location]",
      "name": "[parameters('vNetName')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vNetRange')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetAGSName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetAGSRange')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAGSName'))]"
              }
            }
          },
          {
            "name": "[variables('subnetDBName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetDBRange')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDBName'))]"
              }
            }
          },
          {
            "name": "[variables('subnetWebName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetWebRange')]"
            },
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]"
            }
          },
          {
            "name": "[variables('subnetSBName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetSBRange')]"
            },
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSBName'))]"
            }
          },
          {
            "name": "[variables('subnetSRVName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetSrvRange')]"
            },
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSRVName'))]"
            }
          },
          {
            "name": "[variables('subnetMgtName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetMgtRange')]"
            },
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgMgtName'))]"
            }
          },
          {
            "name": "[variables('subnetTstName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetTstRange')]"
            },
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgTestName'))]"
            }
          }
        ]
      },
      "tags": {
        "displayName": "VirtualNetwork"
      },
      "type": "Microsoft.Network/virtualNetworks"
    }
  ],
  "outputs": {
    "subnetID": {
      "type": "string",
      "value": "[variables('subnetManagmentID')]"
    }
  }
}
